--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -15,14 +13,12 @@
     "@types/react-router-dom": "^5.1.5",
     "apollo-boost": "^0.4.7",
     "graphql": "^15.0.0",
-    "graphql-tag": "^2.10.3",
     "html-loader": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2",
-    "webpack-dev-server": "^3.10.3"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --config config/webpack.config.js --open --hot",
@@ -49,15 +45,22 @@
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.9.0",
     "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "graphql-tag": "^2.10.3",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "ts-jest": "^25.5.0",
+    "webpack": "4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
