--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
     "graphql-tag": "^2.10.3",
     "html-webpack-plugin": "^4.3.0",
     "jest": "24.9.0",
