--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "config"]
 }
