--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@testing-library/cypress": "^6.0.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.0",
@@ -18,12 +19,15 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "start-server-and-test": "^1.11.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "cy:open": "cypress open",
     "start": "webpack-dev-server --mode development --config config/webpack.config.js --open --hot",
     "build": "webpack --mode production --config config/webpack.config.js",
     "test": "react-scripts test",
+    "test:int": "start-server-and-test start http://localhost:8080 cy:open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +51,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.9.0",
     "css-loader": "^3.5.3",
+    "cypress": "^4.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
